[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mutf8"
dynamic = ["version"]
description = "Fast MUTF-8 encoder & decoder"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENCE"]
authors = [{ name = "Tyler Kennedy", email = "tk@tkte.ch" }]
keywords = ["mutf-8", "cesu-8", "jvm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = ["pytest", "pytest-benchmark"]

[project.urls]
Homepage = "https://github.com/TkTech/mutf8"
Source = "https://github.com/TkTech/mutf8"
Issues = "https://github.com/TkTech/mutf8/issues"

[tool.setuptools]
packages = ["mutf8"]
# optional=true so a failed compile falls back to the pure-Python mutf8/mutf8.py.
ext-modules = [
    { name = "mutf8.cmutf8", sources = ["mutf8/cmutf8.c"], language = "c", optional = true },
]

[tool.setuptools.dynamic]
version = { attr = "mutf8.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: mark test as slow to run"]

[tool.cibuildwheel]
skip = ["*_i686"]
test-extras = ["test"]
test-command = "pytest {project}/tests"

[tool.bumpversion]
current_version = "1.1.0"
commit = true
tag = true
tag_name = "v{new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "mutf8/__init__.py"
